--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/react-dom": "^18.2.4",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
+    "@vitejs/plugin-legacy": "^4.0.3",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.40.0",
@@ -55,6 +56,7 @@
     "postcss-import": "^15.1.0",
     "prettier": "2.8.8",
     "tailwindcss": "^3.3.2",
+    "terser": "^5.17.3",
     "typescript": "^5.0.4",
     "vite": "^4.3.5",
     "vite-tsconfig-paths": "^4.2.0",
