--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,7 +3,15 @@
   // Extension identifier format: ${publisher}.${name}. Example: vscode.csharp
 
   // List of extensions which should be recommended for users of this workspace.
-  "recommendations": ["gruntfuggly.todo-tree"],
+  "recommendations": [
+    "gruntfuggly.todo-tree",
+    "github.vscode-github-actions",
+    "eamodio.gitlens",
+    "dbaeumer.vscode-eslint",
+    "esbenp.prettier-vscode",
+    "bradlc.vscode-tailwindcss",
+    "redhat.vscode-yaml"
+  ],
   // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
   "unwantedRecommendations": []
 }
