feat: add docs tab at graphiql page with query listing so far

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
       "@pages/*": ["./src/pages/*"],
       "@routes/*": ["./src/routes/*"],
       "@services/*": ["./src/services/*"],
-      "@utils/*": ["./src/utils/*"]
+      "@utils/*": ["./src/utils/*"],
+      "@consts/*": ["./src/constants/*"]
     },
     "allowJs": false,
     "forceConsistentCasingInFileNames": true,
