--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "fdev": "firebase emulators:start & npm run dev",
     "build": "npm run lint && vite build",
     "preview": "vite preview",
     "test": "vitest",
@@ -28,6 +29,8 @@
     "@reduxjs/toolkit": "^1.9.5",
     "firebase": "^9.22.0",
     "framer-motion": "^10.12.10",
+    "graphiql": "^2.4.4",
+    "graphiql-explorer": "^0.9.0",
     "graphql": "^16.6.0",
     "i18next": "^22.4.15",
     "i18next-browser-languagedetector": "^7.0.1",
