fix: make log out button redirect to welcome page

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "fdev": "firebase emulators:start & npm run dev",
+    "firebase": "firebase emulators:start",
     "build": "npm run lint && vite build",
     "preview": "vite preview",
     "test": "vitest",
