--- a/package.json
+++ b/package.json
@@ -23,47 +23,52 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.6.1",
+    "@codemirror/lang-json": "^6.0.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^1.9.5",
-    "firebase": "^9.22.0",
-    "framer-motion": "^10.12.10",
+    "@uiw/codemirror-themes": "^4.20.2",
+    "@uiw/react-codemirror": "^4.20.2",
+    "firebase": "^9.22.1",
+    "framer-motion": "^10.12.16",
     "graphql": "^16.6.0",
-    "i18next": "^22.4.15",
+    "i18next": "^22.5.0",
     "i18next-browser-languagedetector": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
-    "react-hook-form": "^7.43.9",
-    "react-i18next": "^12.2.2",
+    "react-hook-form": "^7.44.1",
+    "react-i18next": "^12.3.1",
+    "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.11.1"
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
+    "@favware/graphql-pokemon": "^7.3.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
-    "@types/react": "^18.2.6",
+    "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.5",
-    "@typescript-eslint/parser": "^5.59.5",
-    "@vitejs/plugin-legacy": "^4.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
+    "@vitejs/plugin-legacy": "^4.0.4",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.40.0",
+    "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.5",
     "husky": "^8.0.3",
-    "jsdom": "^22.0.0",
+    "jsdom": "^22.1.0",
     "postcss": "^8.4.23",
     "postcss-import": "^15.1.0",
     "prettier": "2.8.8",
     "tailwindcss": "^3.3.2",
-    "terser": "^5.17.3",
+    "terser": "^5.17.6",
     "typescript": "^5.0.4",
-    "vite": "^4.3.5",
+    "vite": "^4.3.9",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.30.1"
   },
