--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,10 @@
       "@app/*": ["./src/app/*"],
       "@assets/*": ["./src/assets/*"],
       "@components/*": ["./src/components/*"],
+      "@consts/*": ["./src/constants/*"],
       "@hocs/*": ["./src/hocs/*"],
       "@hooks/*": ["./src/hooks/*"],
+      "@interfaces/*": ["src/interfaces/*"],
       "@pages/*": ["./src/pages/*"],
       "@routes/*": ["./src/routes/*"],
       "@services/*": ["./src/services/*"],
