feat: create main page
* feat: create Headers editor

* feat: create general purpose editor

* feat: create main page

* fix: responsive styles

* Delete GraphQLPage.tsx

This file was incorrectly resolved during the merge conflict

* feat: improve Lighthouse score

* feat: adopt GraphiQlSpace to GraphiQl page

* fix: private routes

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview",
     "test": "vitest",
     "lint:prettier": "prettier --ignore-path .gitignore --ignore-unknown --check",
-    "lint:eslint": "eslint --ignore-path .gitignore",
+    "lint:eslint": "eslint --ignore-path .gitignore --max-warnings=0",
     "typecheck": "tsc --noEmit",
     "lint": "npm run lint:prettier -- . & npm run typecheck & npm run lint:eslint -- .",
     "prepare": "husky install"
